force-app/main/default/objects/Extole_Event_Fire_Log__c/Extole_Event_Fire_Log__c.object-meta.xml
<CustomObject>
    <label>Extole Event Fire Log</label>
    <nameField>
        <label>Event Fire Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>EFL-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Extole Event Fire Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>