force-app/main/default/objects/Extole_Event_Fire_Log__c/fields/HTTP_Status__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Status__c</fullName>
    <label>HTTP Status</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>